feat: 복수 작품 등록이 반영된 작품 수정 api